web: new api and add swagger

--- a/gi-pro-web/src/main/resources/gipro.properties
+++ b/gi-pro-web/src/main/resources/gipro.properties
@@ -6,3 +6,12 @@ ext.clientId=
 ext.clientSecret=
 ext.aacURL=
 ext.redirect=
+
+springfox.documentation.swagger.v2.path=api-docs
+swagger.title=GiPro Backend
+swagger.desc=description here
+swagger.version=1.0
+swagger.tos.url=
+swagger.contact=info@smartcommunity.it
+swagger.license=Apache License, Version 2.0
+swagger.license.url=http://www.apache.org/licenses/LICENSE-2.0
