--- a/gi-pro-web/pom.xml
+++ b/gi-pro-web/pom.xml
@@ -13,7 +13,19 @@
 	</properties>
 
 	<dependencies>
-	
+		
+		<dependency>
+			<groupId>io.swagger</groupId>
+			<artifactId>swagger-core</artifactId>
+			<version>1.5.9</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>2.5.0</version>
+		</dependency>
+			
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
@@ -218,5 +230,13 @@
 		</plugins>
 		<finalName>gi-pro</finalName>
 	</build>
-
+	
+	<repositories>
+		<repository>
+			<id>jcenter-snapshots</id>
+			<name>jcenter</name>
+			<url>https://jcenter.bintray.com/</url>
+		</repository>
+	</repositories>
+	
 </project>
