--- a/gi-pro-web/pom.xml
+++ b/gi-pro-web/pom.xml
@@ -13,19 +13,25 @@
 	</properties>
 
 	<dependencies>
-		
+
 		<dependency>
 			<groupId>io.swagger</groupId>
 			<artifactId>swagger-core</artifactId>
 			<version>1.5.9</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger2</artifactId>
 			<version>2.5.0</version>
 		</dependency>
-			
+		
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-csv</artifactId>
+			<version>1.4</version>
+		</dependency>
+
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
@@ -230,7 +236,7 @@
 		</plugins>
 		<finalName>gi-pro</finalName>
 	</build>
-	
+
 	<repositories>
 		<repository>
 			<id>jcenter-snapshots</id>
@@ -238,5 +244,5 @@
 			<url>https://jcenter.bintray.com/</url>
 		</repository>
 	</repositories>
-	
+
 </project>
