--- a/gi-pro-mobile/bower.json
+++ b/gi-pro-mobile/bower.json
@@ -5,7 +5,9 @@
 		"ngCordova": "latest",
 		"angular-i18n": "latest",
 		"angular-translate": "latest",
-		"angular-translate-loader-static-files": "latest"
+		"angular-translate-loader-static-files": "latest",
+		"ionic-datepicker": "^1.2.1",
+		"ionic-timepicker": "^0.6.0"
 	},
 	"devDependencies": {
 		"ionic": "driftyco/ionic-bower#1.3.1"
@@ -18,7 +20,12 @@
 			"angular-i18n": "bower_components/angular-i18n/angular-locale_it-it.js",
 			"angular-translate": "bower_components/angular-translate/angular-translate.min.js",
 			"angular-translate-loader-static-files": "bower_components/angular-translate-loader-static-files/angular-translate-loader-static-files.min.js",
-			"ionic-wizard": "bower_components/ionic-wizard/dist/ion-wizard.min.js"
+			"moment": "bower_components/moment/min/moment-with-locales.min.js",
+			"ionic-datepicker": "bower_components/ionic-datepicker/dist/ionic-datepicker.bundle.min.js",
+			"ionic-timepicker": "bower_components/ionic-timepicker/dist/ionic-timepicker.bundle.min.js"
 		}
+	},
+	"resolutions": {
+		"angular": ">= 1.2.23"
 	}
 }
