web: props file

--- a/gi-pro-web/src/main/resources/gipro.properties
+++ b/gi-pro-web/src/main/resources/gipro.properties
@@ -1,6 +1,8 @@
 db.name=GiPro
 defaultLang=it
 
+application.url=
+
 image.upload.dir=
 
 rememberme.key=gipro.128
@@ -8,6 +10,12 @@ ext.clientId=
 ext.clientSecret=
 ext.aacURL=
 ext.redirect=
+
+mail.username=
+mail.password=
+mail.host=
+mail.port=
+mail.protocol=
 
 springfox.documentation.swagger.v2.path=api-docs
 swagger.title=GiPro Backend
