--- a/gi-pro-mobile/bower.json
+++ b/gi-pro-mobile/bower.json
@@ -17,7 +17,11 @@
 		"sources": {
 			"ionic": "bower_components/ionic/**",
 			"ngCordova": "bower_components/ngCordova/dist/ng-cordova.min.js",
-			"angular-i18n": "bower_components/angular-i18n/angular-locale_it-it.js",
+			"angular-i18n": [
+				"bower_components/angular-i18n/angular-locale_it-it.js",
+				"bower_components/angular-i18n/angular-locale_en-gb.js",
+				"bower_components/angular-i18n/angular-locale_en-us.js"
+			],
 			"angular-translate": "bower_components/angular-translate/angular-translate.min.js",
 			"angular-translate-loader-static-files": "bower_components/angular-translate-loader-static-files/angular-translate-loader-static-files.min.js",
 			"moment": "bower_components/moment/min/moment-with-locales.min.js",
