--- a/gi-pro-mobile/package.json
+++ b/gi-pro-mobile/package.json
@@ -25,5 +25,7 @@
     "cordova-plugin-x-toast",
     "cordova-plugin-inappbrowser"
   ],
-  "cordovaPlatforms": []
+  "cordovaPlatforms": [
+    "android"
+  ]
 }
