Pish notifications integrated

--- a/gi-pro-web/src/main/resources/gipro.properties
+++ b/gi-pro-web/src/main/resources/gipro.properties
@@ -6,10 +6,14 @@ application.url=
 image.upload.dir=
 
 rememberme.key=gipro.128
-ext.clientId=
-ext.clientSecret=
-ext.aacURL=
-ext.redirect=
+
+#communicatorURL=
+#ext.aacURL
+push.clientId=
+push.clientSecret=
+push.appName=
+push.senderApiKey=
+push.senderId=
 
 mail.username=
 mail.password=
@@ -25,3 +29,4 @@ swagger.tos.url=
 swagger.contact=info@smartcommunity.it
 swagger.license=Apache License, Version 2.0
 swagger.license.url=http://www.apache.org/licenses/LICENSE-2.0
+
