--- a/gi-pro-web/pom.xml
+++ b/gi-pro-web/pom.xml
@@ -13,6 +13,17 @@
 	</properties>
 
 	<dependencies>
+        <dependency>
+          <groupId>eu.trentorise.smartcampus</groupId>
+          <artifactId>communicator.client</artifactId>
+          <version>2.3.0</version>
+          <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>eu.trentorise.smartcampus</groupId>
+            <artifactId>aac.client</artifactId>
+            <version>1.2</version>
+        </dependency>
 
 		<dependency>
 			<groupId>io.swagger</groupId>
