jwt based authentication

--- a/gi-pro-web/pom.xml
+++ b/gi-pro-web/pom.xml
@@ -129,6 +129,11 @@
 			<artifactId>spring-security-config</artifactId>
 			<version>${spring-security-version}</version>
 		</dependency>
+		<dependency>
+		    <groupId>io.jsonwebtoken</groupId>
+		    <artifactId>jjwt</artifactId>
+		    <version>0.7.0</version>
+		</dependency>
 
 		<dependency>
 			<groupId>log4j</groupId>
