--- a/gi-pro-mobile/package.json
+++ b/gi-pro-mobile/package.json
@@ -36,11 +36,11 @@
     }
   ],
   "cordovaPlatforms": [
+    "ios",
     {
       "platform": "android",
-      "version": "5.0.0",
-      "locator": "android@5.0.0"
-    },
-    "ios"
+      "version": "5.1.1",
+      "locator": "android@5.1.1"
+    }
   ]
 }
