--- a/gi-pro-mobile/package.json
+++ b/gi-pro-mobile/package.json
@@ -37,10 +37,6 @@
   ],
   "cordovaPlatforms": [
     "ios",
-    {
-      "platform": "android",
-      "version": "5.1.1",
-      "locator": "android@5.1.1"
-    }
+    "android"
   ]
 }
