--- a/gi-pro-mobile/package.json
+++ b/gi-pro-mobile/package.json
@@ -36,11 +36,15 @@
     }
   ],
   "cordovaPlatforms": [
-    "ios",
     {
       "platform": "android",
       "version": "5.1.1",
       "locator": "android@5.1.1"
+    },
+    {
+      "platform": "ios",
+      "version": "4.1.0",
+      "locator": "ios@4.1.0"
     }
   ]
 }
