--- a/gi-pro-web/src/main/resources/gipro.properties
+++ b/gi-pro-web/src/main/resources/gipro.properties
@@ -7,11 +7,11 @@ image.upload.dir=
 
 rememberme.key=gipro.128
 
-push.url=https://tn.smartcommunitylab.it/core.communicator
-ext.aacURL=https://tn.smartcommunitylab.it/aac
-push.clientId=39a395fc-9767-4fe4-9c2a-78d68e7229b4
-push.clientSecret=d4fa69a6-a2d0-42a4-af47-117e02183a69
-push.appName=gipro
+#communicatorURL=
+#ext.aacURL
+push.clientId=
+push.clientSecret=
+push.appName=
 push.senderApiKey=
 push.senderId=
 
