Generic login, clean up

--- a/gi-pro-web/pom.xml
+++ b/gi-pro-web/pom.xml
@@ -268,7 +268,7 @@
 			</plugin>
 
 		</plugins>
-		<finalName>gi-pro</finalName>
+		<finalName>gi-pro-generic</finalName>
 	</build>
 
 	<repositories>
