--- a/gi-pro-web/src/main/resources/javamail.properties
+++ b/gi-pro-web/src/main/resources/javamail.properties
@@ -1,10 +1,10 @@
 mail.transport.protocol=smtps
-mail.smtps.localhost=
-mail.smtps.host=
-mail.smtps.port=
+mail.smtps.localhost=server.pec-email.com
+mail.smtps.host=server.pec-email.com
+mail.smtps.port=465
 mail.smtps.auth=true
 mail.smtps.quitwait=false
 mail.smtps.ssl.enable=true
 mail.smtps.connectiontimeout=5000
-mail.smtps.starttls.enable=true
+#mail.smtps.starttls.enable=true
 mail.debug=false
