--- a/gi-pro-web/src/main/resources/gipro.properties
+++ b/gi-pro-web/src/main/resources/gipro.properties
@@ -1,27 +1,24 @@
-db.name=GiProGen
+db.name=GiPro
 defaultLang=it
 
-application.url=https://dev.smartcommunitylab.it/gi-pro-generic
-
-image.upload.dir=/home/dev/sources/gi-pro/images
-
-push.url=http://localhost:8080/core.communicator/
+application.url=
+image.upload.dir=
 
 rememberme.key=gipro.128
-ext.aacURL=http://localhost:8080/aac
-push.clientId=8fb9b5cd-09ce-4edd-a4b3-b349ad5904c9
-push.clientSecret=daa4480c-f9c4-4145-ad9e-ce1a1caf08e2
-push.appName=gipro
-push.senderApiKey=AIzaSyCxawQRX979fcj25pMPY3rWf2khcibw77k
-push.senderId=453601816446
 
+#communicatorURL=
+#ext.aacURL
+push.clientId=
+push.clientSecret=
+push.appName=
+push.senderApiKey=
+push.senderId=
 
-mail.username=associazione.gipro@pec-legal.it
-mail.password=vicologalasso19
-mail.host=server.pec-email.com
-mail.port=465
-mail.protocol=smtps
-
+mail.username=
+mail.password=
+mail.host=
+mail.port=
+mail.protocol=
 
 springfox.documentation.swagger.v2.path=api-docs
 swagger.title=GiPro Backend
