Fix for address autocomplete and professionals on map

--- a/gi-pro-mobile/package.json
+++ b/gi-pro-mobile/package.json
@@ -15,6 +15,9 @@
     "gulp-util": "^2.2.14",
     "shelljs": "^0.3.0"
   },
+  "standard": {
+    "globals": ["angular", "L"]
+  },
   "cordovaPlugins": [
     "cordova-plugin-device",
     "cordova-plugin-console",
